etc/kubernetes/web/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: 194396987458.dkr.ecr.us-east-1.amazonaws.com/dreamwidth/web:latest
        name: web
        resources:
          requests:
            cpu: 1
            memory: 3500M
          limits:
            cpu: 1
            memory: 3500M
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: config
          mountPath: /dw/etc
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: dw-config
