etc/kubernetes/web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 80
  selector:
    app: web
  type: NodePort
